--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "eslint-config-prettier": "^10.0.1",
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "lefthook": "^1.10.10",
     "prettier": "^3.5.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "lefthook": "^1.10.10"
+    "typescript": "^5"
   }
 }
