--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-query-devtools": "^5.66.7",
+    "axios": "^1.7.9",
     "next": "15.2.0-canary.65",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
