--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
     "type-check": "tsc --noEmit -p ./tsconfig.json"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
     "@tanstack/react-query": "^5.66.7",
     "@tanstack/react-query-devtools": "^5.66.7",
+    "@use-funnel/browser": "^0.0.12",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
