--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.475.0",
+    "motion": "^12.4.5",
     "next": "15.2.0-canary.65",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
