--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.475.0",
     "motion": "^12.4.5",
     "next": "15.2.0-canary.65",
+    "next-runtime-env": "^3.2.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-kakao-maps-sdk": "^1.1.27",
