--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "motion": "^12.4.5",
     "next": "15.2.0-canary.65",
     "next-runtime-env": "^3.2.2",
+    "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-kakao-maps-sdk": "^1.1.27",
+    "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
