fix: openGraph 이미지 안나오는 부분 수정

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
-# API 서버 URL
+# App Service URL
 NEXT_PUBLIC_API_URL=https://api.example.com
+NEXT_PUBLIC_SITE_URL=https://site.example.com
 
 # 외부 서비스 API 키
 NEXT_PUBLIC_KAKAO_KEY=your_kakao_api_key
